TestSuite/PascalABCTests/errors/err0086.pas
type TClass = class
procedure Test; abstract;
end;

TClass2 = class(TClass)
procedure Test;
end;

begin
end.